--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="search">Search</string>
     <string name="cover_art_description">Cover art</string>
     <string name="search_hint">Search tracks</string>
+    <string name="title_activity_search">SearchActivity</string>
 </resources>
